Bxc 5492 aggregate single file (#144)
* BXC-5492 update query and start fixing tests

* BXC-5492 refine query and fix tests

* BXC-5492 fix test

* BXC05492 remove debug variable