@@ -68,8 +68,11 @@ public class AggregateFileMappingServiceTest {
         service.generateMapping(options);
 
         SourceFilesInfo info = service.loadMappings();
-        assertMappingPresent(info, "grp:groupa:group1", "group1", null);
-        assertEquals(1, info.getMappings().size());
+        assertNoMatchingSourceFile(info, "grp:groupa:group1", "group1");
+        assertNoMatchingSourceFile(info, "27", "group2");
+        assertNoMatchingSourceFile(info, "28", "group11");
+        assertNoMatchingSourceFile(info, "29", "");
+        assertEquals(4, info.getMappings().size());
     }
 
     @Test
@@ -87,7 +90,10 @@ public class AggregateFileMappingServiceTest {
 
         SourceFilesInfo info = service.loadMappings();
         assertMappingPresent(info, "grp:groupa:group1", "group1", aggrPath1);
-        assertEquals(1, info.getMappings().size());
+        assertNoMatchingSourceFile(info, "27", "group2");
+        assertNoMatchingSourceFile(info, "28", "group11");
+        assertNoMatchingSourceFile(info, "29", "");
+        assertEquals(4, info.getMappings().size());
     }
 
     @Test
@@ -102,7 +108,10 @@ public class AggregateFileMappingServiceTest {
 
         SourceFilesInfo info = service.loadMappings();
         assertMappingPresentWithPotentials(info, "grp:groupa:group1", "group1", aggrPath1, aggrPath2);
-        assertEquals(1, info.getMappings().size());
+        assertNoMatchingSourceFile(info, "27", "group2");
+        assertNoMatchingSourceFile(info, "28", "group11");
+        assertNoMatchingSourceFile(info, "29", "");
+        assertEquals(4, info.getMappings().size());
     }
 
     @Test
@@ -119,7 +128,10 @@ public class AggregateFileMappingServiceTest {
 
         SourceFilesInfo info = service.loadMappings();
         assertMappingPresent(info, "grp:groupa:group1", "group1", aggrPath1);
-        assertEquals(1, info.getMappings().size());
+        assertNoMatchingSourceFile(info, "27", "group2");
+        assertNoMatchingSourceFile(info, "28", "group11");
+        assertNoMatchingSourceFile(info, "29", "");
+        assertEquals(4, info.getMappings().size());
     }
 
     @Test
@@ -138,7 +150,10 @@ public class AggregateFileMappingServiceTest {
 
         SourceFilesInfo info = service.loadMappings();
         assertMappingPresent(info, "grp:groupa:group1", "group1", aggrPath1, aggrPath2);
-        assertEquals(1, info.getMappings().size());
+        assertNoMatchingSourceFile(info, "27", "group2");
+        assertNoMatchingSourceFile(info, "28", "group11");
+        assertNoMatchingSourceFile(info, "29", "");
+        assertEquals(4, info.getMappings().size());
     }
 
     @Test
@@ -159,7 +174,10 @@ public class AggregateFileMappingServiceTest {
         SourceFilesInfo info = service.loadMappings();
         // Only the new path should be retained with force flag
         assertMappingPresent(info, "grp:groupa:group1", "group1", aggrPath2);
-        assertEquals(1, info.getMappings().size());
+        assertNoMatchingSourceFile(info, "27", "group2");
+        assertNoMatchingSourceFile(info, "28", "group11");
+        assertNoMatchingSourceFile(info, "29", "");
+        assertEquals(4, info.getMappings().size());
     }
 
     @Test
@@ -176,19 +194,29 @@ public class AggregateFileMappingServiceTest {
         SourceFilesInfo info = service.loadMappings();
         assertMappingPresent(info, "604", "617.cpd", aggrPath1);
         assertMappingPresent(info, "607", "620.cpd", aggrPath2);
-        assertEquals(2, info.getMappings().size());
+        // single file object that does not match the pattern
+        assertNoMatchingSourceFile(info, "216", "229.jp2");
+        assertEquals(3, info.getMappings().size());
     }
 
     @Test
-    public void generateNoMatchableObjectsTest() throws Exception {
-        // Doesn't contain any compounds and no grouping
+    public void generateSingleFileMatchableObjectsTest() throws Exception {
+        // Single File Objects
         testHelper.indexExportData("mini_gilmer");
+        Path aggrPath1 = testHelper.addSourceFile("26.pdf");
+        var path = project.getProjectPath();
 
         var options = makeDefaultOptions();
+        options.setExportField("find");
+        options.setFieldMatchingPattern("([^.]+)\\.JP2");
         service.generateMapping(options);
 
         SourceFilesInfo info = service.loadMappings();
-        assertTrue(info.getMappings().isEmpty());
+        assertFalse(info.getMappings().isEmpty());
+        assertMappingPresent(info, "25", "26.JP2", aggrPath1);
+        assertNoMatchingSourceFile(info, "26", "27.JP2");
+        assertNoMatchingSourceFile(info, "27", "50.jp2");
+        assertEquals(3, info.getMappings().size());
     }
 
     @Test
@@ -207,12 +235,15 @@ public class AggregateFileMappingServiceTest {
 
         SourceFilesInfo info = service.loadMappings();
         assertMappingPresent(info, "grp:groupa:group1", "group1", aggrPath1);
-        assertEquals(1, info.getMappings().size());
+        assertNoMatchingSourceFile(info, "27", "group2");
+        assertNoMatchingSourceFile(info, "28", "group11");
+        assertNoMatchingSourceFile(info, "29", "");
+        assertEquals(4, info.getMappings().size());
     }
 
     private void setupGroupedIndex() throws Exception {
         var options = new GroupMappingOptions();
-        options.setGroupFields(Arrays.asList("groupa"));
+        options.setGroupFields(List.of("groupa"));
         testHelper.getGroupMappingService().generateMapping(options);
         var syncOptions = new GroupMappingSyncOptions();
         syncOptions.setSortField("file");
@@ -260,5 +291,14 @@ public class AggregateFileMappingServiceTest {
             assertTrue(mapping.getPotentialMatches().contains(potentialPath.toString()),
                     "Mapping did not contain expected potential path: " + potentialPath);
         }
+    }
+
+    private void assertNoMatchingSourceFile(SourceFilesInfo info, String cdmid, String matchingVal) {
+        List<SourceFilesInfo.SourceFileMapping> mappings = info.getMappings();
+        SourceFilesInfo.SourceFileMapping mapping = mappings.stream().filter(m -> m.getCdmId().equals(cdmid)).findFirst().get();
+
+        assertNull(mapping.getSourcePaths());
+        assertEquals(matchingVal, mapping.getMatchingValue());
+        assertNull(mapping.getPotentialMatches());
     }
 }
